# geopolitics-oil-data-project

./: .coverage  .env.example  .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
config/: elastic_mapping.json
dags/: main_pipeline_dag.py
infrastructure/: airflow.Dockerfile  docker-compose.yml  localstack_init.sh
notebooks/: 01_explore_raw_s3.ipynb  02_explore_formatted_spark.ipynb  03_explore_combined_stress_index.ipynb  04_grid_search.ipynb  05_grid_search.ipynb
src/combination/: compute_stress_index.py
src/indexing/: load_to_elastic.py
src/ingestion/: backfill_gdelt.py  backfill_yfinance.py  batch_extract_fred.py  batch_extract_gdelt.py  batch_extract_yahoofinance.py  batch_extract_yfinance.py
src/transformation/: clean_gdelt.py  clean_yfinance.py
src/visualization/: setup_kibana.py
tests/: test_backfill_gdelt.py  test_backfill_yfinance.py  test_batch_extract_gdelt.py  test_batch_extract_yfinance.py  test_clean_gdelt.py  test_clean_yfinance.py  test_compute_stress_index.py  test_load_to_elastic.py  test_setup_kibana.py
