[tool.poetry]
name = "geopolitics-oil-data-project"
version = "1.0.0"
description = "Data Lake — Corrélation entre stress géopolitique (GDELT) et prix du pétrole (Yahoo Finance)"
authors = ["Omar Fekih-Hassen, Alexandre Donnat,Leo Ivars"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"

# -- Ingestion --
requests = "^2.31"              # Appels HTTP vers l'API GDELT
boto3 = "^1.34"                 # Client AWS S3 (pour écrire sur LocalStack)
yfinance = "^0.2"               # Téléchargement données boursières Yahoo Finance (WTI)
pyarrow = ">=15.0"              # Moteur Parquet pour pandas (to_parquet / read_parquet)
# confluent-kafka = "^2.3"      # PHASE 2 — Kafka streaming (à décommenter)

# -- Transformation (Spark) --
pyspark = "^3.5"                # Moteur de traitement distribué

# -- Indexation --
elasticsearch = "^8.10"         # Client Python pour Elasticsearch

# -- Utilitaires --
python-dotenv = "^1.0"          # Charge les variables du .env dans les scripts
pandas = "^2.1"                 # Manipulation de données (utilitaire)
s3fs = "^2023.10.0"             # Driver S3 pour PySpark/Pandas → LocalStack
matplotlib = "^3.10.8"
awscli = "^1.36"                 # AWS CLI (binaire aws)
awscli-local = "^0.22"           # Wrapper awslocal → LocalStack automatiquement
xgboost = "^3.2.0"
tensorflow = "^2.20.0"

[tool.poetry.group.airflow.dependencies]
# Utile en local uniquement pour l'autocomplétion IDE
apache-airflow = "^2.7"

[tool.poetry.group.dev.dependencies]
pytest    = "^7.4"              # Tests unitaires
black     = "^23.0"             # Formatage automatique du code
ruff      = "^0.1"              # Linter rapide
ipykernel = "^6.29"             # Kernel Jupyter pour le venv VS Code

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
